@@ -10,7 +10,6 @@ inc/Module/Install/ReadmeFromPod.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/CGI/Header.pm
-lib/CGI/Header/Standalone.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
@@ -20,6 +19,4 @@ t/10_basic.t
 t/20_cookie.t
 t/21_cgi_simple.t
 t/22_blosxom.t
-t/30_standalone.t
-t/31_cgi_simple.t
 xt/pod.t
