@@ -122,7 +122,26 @@ DESCRIPTION
     $self = $header->clear
         This will remove all header properties.
 
-    $header->as_string
+    $header->finalize
+        Returns the header fields as a formatted MIME header. If
+        "CGI::Header#nph" is true, the Status-Line is inserted to the
+        beginning of the response headers.
+
+        Valid multi-line header input is accepted when each line is
+        separated with a CRLF value ("\r\n" on most platforms) followed by
+        at least one space. For example:
+
+          $header->set( Ingredients => "ham\r\n\seggs\r\n\sbacon" );
+
+        Invalid multi-line header input will trigger in an exception. When
+        multi-line headers are received, this method will always output them
+        back as a single line, according to the folding rules of RFC 2616:
+        the newlines will be removed, while white space remains.
+
+        In mod_perl environment, the formatted string is swallowed by
+        Apache2::Response's "send_cgi_header" method silently, and so an
+        empty string is returned.
+
         It's identical to:
 
           $header->query->header( $header->header );
@@ -342,7 +361,7 @@ EXAMPLES
       # get an arrayref which consists of CGI::Cookie objects
       my $cookies = $header->cookies;
 
-      # set CGI::Cookie objects
+      # push a CGI::Cookie object onto the "cookies" property
       $header->cookies( ID => 123456 );
       $header->cookies({ name => 'ID', value => 123456 });
 
