@@ -2,6 +2,7 @@ Revision history for Perl extension CGI::Header.
 
   - Rename CGI::Header#as_string to "finalize" since CGI.pm's header()
     method returns an empty string in "mod_perl" environment
+  - Remove CGI::Header::Standalone
 
 0.53 (1.00-RC6) May 19th, 2013
 
